--- a/ostep/main.tex
+++ b/ostep/main.tex
@@ -7,6 +7,7 @@
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{titling}
+\usepackage{xcolor}
 
 \title{\huge Operating Systems: Three Easy Steps}
 \author{Kunwar Shaanjeet Singh Grover}
