--- a/DesignAndAnalysis2020/lec2.tex
+++ b/DesignAndAnalysis2020/lec2.tex
@@ -110,5 +110,5 @@ is no greater than that of ${\{0, 1\}}^{*}$, which is countable.
 a language. Thus, the set of all problems is of the same cardinality
 as $P{\{0, 1\}}^{*}$, which is uncountable.\\
 
-From \ref{program_countable} and \label{problem_uncountable}, 
+From \ref{program_countable} and \ref{problem_uncountable}, 
 the set of problem is much bigger than the set of programs.
