--- a/ostep/main.tex
+++ b/ostep/main.tex
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 \usepackage{titling}
 \usepackage{xcolor}
+\usepackage{tcolorbox}
 
 \title{\huge Operating Systems: Three Easy Steps}
 \author{Kunwar Shaanjeet Singh Grover}
