--- a/ostep/main.tex
+++ b/ostep/main.tex
@@ -9,6 +9,7 @@
 \usepackage{titling}
 \usepackage{xcolor}
 \usepackage{tcolorbox}
+\usepackage{hyperref}
 
 \title{\huge Operating Systems: Three Easy Steps}
 \author{Kunwar Shaanjeet Singh Grover}
