Added link to a doubt

--- a/ostep/ch2.tex
+++ b/ostep/ch2.tex
@@ -23,7 +23,7 @@ Policies are algorithms for making decisions within the OS.\\
 
 Mechanisms: Provides answer to a \textit{how} question.
 
-Policies: Provides answer to a \textit{which} question.\\
+Policies: Provides answer to a \textit{which} question.
 
 \section{Mechanism: Limited Direct Execution}
 
@@ -212,6 +212,8 @@ There are two types of register saves/restores that happen here:
         are explicitly saved by the \textit{software} (i.e. th OS), but this
         time into memory in the process structure of the process.
 \end{itemize}
+
+More info on the last two points \href{https://cs.stackexchange.com/questions/96550/whats-the-difference-between-user-registers-and-kernel-registers}{here}
 
 \section{Scheduling}
 
