--- a/Sipser/main.tex
+++ b/Sipser/main.tex
@@ -11,7 +11,8 @@
 \usepackage{mdframed}
 \usepackage{algorithm}                                                          
 \usepackage{algorithmic}                                                        
-                                                                                
+\usepackage{extarrows}
+
 % Theorem macros                                                                
 \newmdtheoremenv{theorem}{Theorem}                                                   
 \newmdtheoremenv{claim}[theorem]{Claim}                                              
@@ -26,6 +27,7 @@
 
 \newcommand{\R}{\ensuremath{\mathbb{R}}}
 \newcommand{\N}{\ensuremath{\mathbb{N}}}
+\newcommand{\derives}{\ensuremath{\xLongrightarrow{*}}}
 
 \title{\huge Intro to Complexity Theory}
 \author{Kunwar Shaanjeet Singh Grover}
@@ -44,5 +46,6 @@
 
 \include{ch1}
 \include{ch2}
+\include{ch3}
 
 \end{document}
